--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-31  guidod  <guidod@gmx.de>
+
+	* lib/gzinfo.c (gz_info_detect): move gzip header parsing into
+	    external routine in preperation of dynamic configuration.
+
 2010-03-29  guidod  <guidod@gmx.de>
 
 	* inc/Makefile.am: some more cleanfiles
